--- a/react-project-main/index.html
+++ b/react-project-main/index.html
@@ -9,61 +9,60 @@
       <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="assets-admin/plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Tempusdominus Bootstrap 4 -->
-  <link rel="stylesheet" href="react-project-main/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+  <link rel="stylesheet" href="assets-admin/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
   <!-- iCheck -->
-  <link rel="stylesheet" href="react-project-main/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+  <link rel="stylesheet" href="assets-admin/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
   <!-- JQVMap -->
-  <link rel="stylesheet" href="react-project-main/plugins/jqvmap/jqvmap.min.css">
+  <link rel="stylesheet" href="assets-admin/plugins/jqvmap/jqvmap.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="react-project-main/dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="assets-admin/dist/css/adminlte.min.css">
   <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="react-project-main/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+  <link rel="stylesheet" href="assets-admin/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
   <!-- Daterange picker -->
-  <link rel="stylesheet" href="react-project-main/plugins/daterangepicker/daterangepicker.css">
+  <link rel="stylesheet" href="assets-admin/plugins/daterangepicker/daterangepicker.css">
   <!-- summernote -->
-  <link rel="stylesheet" href="react-project-main/plugins/summernote/summernote-bs4.min.css">
+  <link rel="stylesheet" href="assets-admin/plugins/summernote/summernote-bs4.min.css">
   </head>
-  <body>
+  <body class="hold-transition sidebar-mini layout-fixed">
     <div id="root"></div>
-    <script type="module" src="react-project-main/src/main.jsx"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script type="module" src="assets-admin/src/main.jsx"></script>
     <!-- jQuery -->
-<script src="react-project-main/plugins/jquery/jquery.min.js"></script>
+<script src="assets-admin/plugins/jquery/jquery.min.js"></script>
 <!-- jQuery UI 1.11.4 -->
-<script src="react-project-main/plugins/jquery-ui/jquery-ui.min.js"></script>
+<script src="assets-admin/plugins/jquery-ui/jquery-ui.min.js"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
 <script>
   $.widget.bridge('uibutton', $.ui.button)
 </script>
 <!-- Bootstrap 4 -->
-<script src="react-project-main/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets-admin/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- ChartJS -->
-<script src="react-project-main/plugins/chart.js/Chart.min.js"></script>
+<script src="assets-admin/plugins/chart.js/Chart.min.js"></script>
 <!-- Sparkline -->
-<script src="react-project-main/plugins/sparklines/sparkline.js"></script>
+<script src="assets-admin/plugins/sparklines/sparkline.js"></script>
 <!-- JQVMap -->
-<script src="react-project-main/plugins/jqvmap/jquery.vmap.min.js"></script>
-<script src="react-project-main/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+<script src="assets-admin/plugins/jqvmap/jquery.vmap.min.js"></script>
+<script src="assets-admin/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
 <!-- jQuery Knob Chart -->
-<script src="react-project-main/plugins/jquery-knob/jquery.knob.min.js"></script>
+<script src="assets-admin/plugins/jquery-knob/jquery.knob.min.js"></script>
 <!-- daterangepicker -->
-<script src="react-project-main/plugins/moment/moment.min.js"></script>
-<script src="react-project-main/plugins/daterangepicker/daterangepicker.js"></script>
+<script src="assets-admin/plugins/moment/moment.min.js"></script>
+<script src="assets-admin/plugins/daterangepicker/daterangepicker.js"></script>
 <!-- Tempusdominus Bootstrap 4 -->
-<script src="react-project-main/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+<script src="assets-admin/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
 <!-- Summernote -->
-<script src="react-project-main/plugins/summernote/summernote-bs4.min.js"></script>
+<script src="assets-admin/plugins/summernote/summernote-bs4.min.js"></script>
 <!-- overlayScrollbars -->
-<script src="react-project-main/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+<script src="assets-admin/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 <!-- AdminLTE App -->
-<script src="react-project-main/dist/js/adminlte.js"></script>
+<script src="assets-admin/dist/js/adminlte.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="react-project-main/dist/js/demo.js"></script>
+<script src="assets-admin/dist/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="react-project-main/dist/js/pages/dashboard.js"></script>
+<script src="assets-admin/dist/js/pages/dashboard.js"></script>
   </body>
 </html>
