--- a/react-project-main/index.html
+++ b/react-project-main/index.html
@@ -29,7 +29,8 @@
   </head>
   <body class="hold-transition sidebar-mini layout-fixed">
     <div id="root"></div>
-    <script type="module" src="assets-admin/src/main.jsx"></script>
+    <script type="module" src="
+    /src/main.jsx"></script>
     <!-- jQuery -->
 <script src="assets-admin/plugins/jquery/jquery.min.js"></script>
 <!-- jQuery UI 1.11.4 -->
